--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <com.kyle.radiogrouplib.NestedRadioGroup
+        android:id="@+id/nestedGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
