--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,6 +114,13 @@
                 android:background="@drawable/selector_solid_f5f5f9_corner_1dp_solod_ebf1ff_corner_1dp"
                 android:orientation="horizontal">
 
+               <!-- <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>-->
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/tv_week"
                     android:layout_width="wrap_content"
